--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,13 +4,9 @@
     <string name="app_name">CompMaps</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="step_counter">
-         android.hardware.sensor.stepcounter
-   </string>
-    <string name="step_detector">
-         android.hardware.sensor.stepdetector
-   </string>
+    <string name="step_counter">         android.hardware.sensor.stepcounter</string>
+    <string name="step_detector">         android.hardware.sensor.stepdetector</string>
     <string name="Welcome">Welcome to the future!</string>
-
+    <string name="title_activity_confirmation">confirmation</string>
 
 </resources>
