File Explorer added (On clicking Directions)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="Welcome">Welcome to the future!</string>
     <string name="title_activity_confirmation">confirmation</string>
     <string name="title_activity_file_operations">FileOperations</string>
+    <string name="title_activity_list_file">ListFileActivity</string>
 
 </resources>
